# snowflake-cpp-k8s

./: CMakeLists.txt  Makefile  README.md  main.cpp  snowflake.h  utils.h
test/: benchmark_snowflake.cpp  test_snowflake.cpp
